--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.5.6",
       "angular-resource": "github:angular/bower-angular-resource@^1.5.6",
-      "angular-ui-router": "github:angular-ui/angular-ui-router-bower@^0.3.0"
+      "angular-ui-router": "github:angular-ui/angular-ui-router-bower@^0.3.0",
+      "bootstrap": "github:twbs/bootstrap@3.3.4",
+      "css": "github:systemjs/plugin-css@^0.1.23",
+      "jquery": "npm:jquery@2.2.4",
+      "typescript-collections": "npm:typescript-collections@^1.1.2"
     },
     "devDependencies": {
       "os": "github:jspm/nodelibs-os@^0.2.0-alpha",
@@ -46,6 +50,42 @@
             "format": "global"
           }
         }
+      },
+      "github:twbs/bootstrap@3.3.4": {
+        "shim": {
+          "js/bootstrap": {
+            "deps": [
+              "jquery"
+            ],
+            "exports": "$"
+          }
+        },
+        "dependencies": {
+          "jquery": "*"
+        },
+        "files": [
+          "dist",
+          "fonts",
+          "js",
+          "css",
+          "less",
+          "grunt",
+          "LICENSE"
+        ],
+        "systemjs": {
+          "main": "dist/js/bootstrap.js",
+          "modules": {
+            "dist/js/bootstrap.js": {
+              "deps": [
+                "jquery"
+              ],
+              "exports": "$"
+            }
+          }
+        }
+      },
+      "npm:jquery@2.2.4": {
+        "format": "amd"
       },
       "npm:typescript@1.8.10": {
         "browser": {},
