--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
       "angular": "github:angular/bower-angular@^1.5.6",
       "angular-resource": "github:angular/bower-angular-resource@^1.5.6",
       "angular-ui-router": "github:angular-ui/angular-ui-router-bower@^0.3.0",
-      "bootstrap": "github:twbs/bootstrap@3.3.4",
+      "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "chart.js": "npm:chart.js@2.1.6",
       "css": "github:systemjs/plugin-css@^0.1.23",
-      "jquery": "npm:jquery@2.2.4",
+      "tc-angular-chartjs": "npm:tc-angular-chartjs@2.0.0",
       "typescript-collections": "npm:typescript-collections@^1.1.2"
     },
     "devDependencies": {
       "os": "github:jspm/nodelibs-os@^0.2.0-alpha",
       "plugin-typescript": "github:frankwallis/plugin-typescript@^4.0.16",
       "text": "github:systemjs/plugin-text@^0.0.8"
+    },
+    "peerDependencies": {
+      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
+      "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
+      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
+      "process": "github:jspm/nodelibs-process@^0.2.0-alpha"
     },
     "overrides": {
       "github:angular/bower-angular-resource@1.5.6": {
@@ -51,7 +58,7 @@
           }
         }
       },
-      "github:twbs/bootstrap@3.3.4": {
+      "github:twbs/bootstrap@3.3.6": {
         "shim": {
           "js/bootstrap": {
             "deps": [
@@ -61,7 +68,7 @@
           }
         },
         "dependencies": {
-          "jquery": "*"
+          "jquery": "2"
         },
         "files": [
           "dist",
@@ -86,6 +93,9 @@
       },
       "npm:jquery@2.2.4": {
         "format": "amd"
+      },
+      "npm:moment@2.13.0": {
+        "jspmNodeConversion": false
       },
       "npm:typescript@1.8.10": {
         "browser": {},
